--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.14.1",
     "express-ejs-layouts": "~2.2.0",
     "express-session": "^1.15.6",
+    "express-validator": "^4.3.0",
     "mongoose": "^4.13.4",
     "morgan": "~1.7.0",
     "nodemon": "^1.12.1",
