--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "slack-sloth",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "reload": "nodemon ./bin/www"
+  },
+  "engines": {
+    "node": "8.9.4"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
